# atomicguard

./: .gitignore  .markdownlint.yaml  .plan  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN_A_EXPERIMENT_RUNNER.md  PLAN_B_ATOMICGUARD_VIEWER.md  PLAN_PHASE3_REMAINING.md  README.md  codecov.yml  justfile  main.py  pyproject.toml  run_decomposed_backtrack.sh  run_swe_bench_pro_gpt4o-mini_50.sh  run_swe_bench_pro_kimi-k2_50.sh  workflow_dag.html  workflow_dag_qutebrowser_decomposed.html  workflow_visualization.html
.github/workflows/: ci.yml  release.yml
benchmarks/: simulation.py  workflow_benchmark.py  workflows.json
docs/: getting-started.md  main.tex  tutorial-add-external-project.md
docs/design/: agent_function.md  agent_peas.md  agent_program.md  architecture.md  dashboard_architecture.md  decisions.md  domain_notation.md  domain_ubiquitous_language.md  gap_analysis.md  guard_definitions.md  guard_library.md  paper_scope_differences.md  peas.md  program.md  tdd_workflow_benchmark.md
docs/design/agent_design_process/: agent_function.md  domain_definitions.md  domain_notation.md  domain_ubiquitous_language.md
docs/design/archive/: PLAN_A_EXPERIMENT_RUNNER.md  PLAN_B_ATOMICGUARD_VIEWER.md  pr17_split_plan.md  swe_bench_pro.md  swe_bench_pro_review.md
docs/design/decisions/: adr_generator_optimization.md  decisions.md
docs/design/examples/: lru_cache.md  tdd_workflow.md
docs/design/experiments/: guard_driven_synthesis_design.md  ismis_2026_experiment_plan.md  qwen3_coder_next_failure_analysis.md  swe_bench_pro_extended_results.md  swe_polybench_experiment_7_2_results.md
docs/design/extensions/: 00_notation_extensions.md  01_versioned_environment.md  02_artifact_extraction.md  03_multi_agent_workflows.md  04_learning_loop.md  05_learning_implementation.md  README.md  (+3 more)
docs/paper/: compare.tex  main.tex  overleaf.tex  references.bib  unused_appendix.tex
examples/: basic_mock.py  checkpoint_demo.py  lru_cache.md  tdd_workflow.md
examples/add/: README.md  __init__.py  add_generator.py  generators.py  guards.py  models.py  prompts.json  run.py  workflow.json
examples/advanced/: __init__.py
examples/base/: __init__.py  checkpoint.py  cli.py  config.py  console.py  exceptions.py  generators.py  guards.py  logging_setup.py  workflow.py
examples/basics/: 01_mock.py  02_ollama.py  03_huggingface.py  05_versioned_env.py  06_extraction.py  07_multiagent.py  08_incremental.py  09_backtracking_escalation.py  README.md  __init__.py
examples/checkpoint/: README.md  __init__.py
examples/checkpoint_llm/: README.md
examples/checkpoint_tdd/: workflow.json
examples/dashboard/: __init__.py  __main__.py  config_loader.py  dag_reader.py  discovery.py  experiment_locator.py  server.py
examples/gui/: README.md  __init__.py  app.py  artifact_viewer.py  run.py  workflow.json
examples/sdlc/: README.md  __init__.py  models.py  prompts.json  run.py  workflow.json
examples/sdlc_checkpoint/: README.md  models.py
examples/swe_bench_ablation/: __init__.py  analysis.py  dataset.py  demo.py  evaluation.py  experiment_runner.py  models.py  prompts.json
examples/swe_bench_common/: __init__.py  analysis.py  config.py  dataset.py  evaluation.py  models.py  results.py
examples/swe_bench_pro/: EXAMPLE_RUN.md  README.md  __init__.py  dataset.py  demo.py  evaluation.py  experiment_runner.py  final_error_analysis.py  ismis_analysis.py  ismis_runner.py  language.py  logging.json  prompts.json
examples/tdd/: README.md  __init__.py
examples/tdd_human_review/: README.md  run.py  workflow.json
examples/tdd_import_guard/: README.md  run.py
examples/tui/: __init__.py
results/: .gitkeep  report.md
scripts/: trace_report.py
src/atomicguard/: __init__.py
tests/: __init__.py  conftest.py
tests/application/: test_action_pair.py  test_agent.py  test_checkpoint_service.py  test_feedback_summarizer.py  test_resumable_workflow.py  test_resume_service.py  test_workflow.py  test_workflow_dependencies.py  test_workflow_escalation.py  test_workflow_event_emitter.py
tests/architecture/: __init__.py  conftest.py  test_conventions.py  test_gate10_infrastructure.py  test_hexagonal_boundaries.py  test_layer_rules.py
tests/benchmark/: __init__.py  test_analysis_guard.py  test_classify_then_plan.py  test_evaluation_adapters.py  test_evaluation_problem.py  test_evaluation_runner.py  test_evaluation_scoring.py  test_llm_json_generator.py  test_recon_guard.py  test_strategy_guard.py
tests/domain/: test_config_ref.py  test_models.py  test_prompts.py  test_workflow_event.py
tests/examples/: test_eval_logging.py  test_swe_bench_pro.py
tests/extensions/: __init__.py  test_ext01_versioned_env.py  test_ext02_extraction.py  test_ext03_multiagent.py  test_ext04_learning_loop.py  test_ext05_learning_impl.py  test_ext08_composite_guards.py
tests/guards/: __init__.py  test_base.py  test_imports.py  test_lint_guard.py  test_syntax.py  test_test_localization_guard.py  test_test_runner.py  test_test_setup_verification_guard.py
tests/infrastructure/: test_registry.py  test_workflow_event_store.py
(+380 files in other folders)
